--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -172,7 +172,7 @@
 
 
 <header data-bs-theme="dark">
-    {% include 'includes/inc_menu.html' %}
+    {% include 'blog/includes/inc_menu.html' %}
 </header>
 
 <main>
@@ -180,11 +180,10 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">ТОВАРЫ</h1>
-                <p class="lead text-body-secondary">Товары нашего магазина</p>
+                <h1 class="fw-light">БЛОГ</h1>
+                <p class="lead text-body-secondary">Статьи про технику</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                    <a href="{% url 'blog:blog_create' %}" role="button" class="btn btn-primary">Добавить статью</a>
                 </p>
             </div>
         </div>
