--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,21 +1,21 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for product in products %}
+                {% for blog in object_list %}
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img class="card-img-top" src="{{ product.preview | media_filter }}">
+                        <img class="card-img-top" src="{{ blog.preview | media_filter }}">
                         <div class="card-body">
-                            <p class="card-text">{{ product.name }}</p>
+                            <p class="card-text">{{ blog.title }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Подробнее</a>
-                                    <button type="button" class="btn btn-success">В корзину</button>
+                                    <a class="btn btn-primary" href="{% url 'blog:blog_detail' blog.pk %}" role="button">Читать</a>
+                                    <a class="btn btn-success" href="{% url 'blog:blog_update' blog.pk %}" role="button">Редактировать</a>
+                                    <a class="btn btn-danger" href="{% url 'blog:blog_delete' blog.pk %}" role="button">Удалить</a>
                                 </div>
-                                <small class="text-body-secondary">9 mins</small>
                             </div>
                         </div>
                     </div>
