--- a/blog/templates/blog/includes/inc_menu.html
+++ b/blog/templates/blog/includes/inc_menu.html
@@ -9,8 +9,8 @@
                     <h4>Навигация</h4>
                     <ul class="list-unstyled">
                         <li><a href="{% url 'catalog:product_list' %}" class="text-white">Главная</a></li>
-                        <li><a href="#" class="text-white">Авторизация</a></li>
                         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
+                        <li><a href="{% url 'blog:blog_list' %}" class="text-white">Блог</a></li>
                     </ul>
                 </div>
             </div>
