--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -2,24 +2,28 @@
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for product in object_list %}
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="{{ product.preview | media_filter }}">
-                        <div class="card-body">
-                            <p class="card-text">{{ product.name }}</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Подробнее</a>
-                                </div>
+    <div class="container">
+        <div class="col-12 mb-5">
+            <a class="btn btn-outline-primary" href="{% url 'catalog:product_create'%}" role="button">Добавить товар</a>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {% for product in object_list %}
+            <div class="col">
+                <div class="card shadow-sm">
+                    <img class="card-img-top" src="{{ product.preview | media_filter }}">
+                    <div class="card-body">
+                        <p class="card-text">{{ product.name }}</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}"
+                                   role="button">Подробнее</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
         </div>
     </div>
+</div>
 {% endblock %}
