--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -17,6 +17,8 @@
                             <div class="btn-group">
                                 <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}"
                                    role="button">Подробнее</a>
+                                <a class="btn btn-success" href="{% url 'catalog:product_update' product.pk %}"
+                                   role="button">Редактировать</a>
                             </div>
                         </div>
                     </div>
