--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -23,6 +23,12 @@
                         </div>
                     </div>
                 </div>
+                <p class="card-footer">
+                    Версия: {{ product.active_version }}
+                    {% if product.number_version %}
+                        (№ {{ product.number_version }})
+                    {% endif %}
+                </p>
             </div>
             {% endfor %}
         </div>
