--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,6 +13,9 @@
                 <button type="submit" class="btn btn-primary">
                     Войти
                 </button>
+                <div class="card-footer">
+                    <a href="{% url 'users:password_recovery' %}">Забыл пароль</a>
+
             </div>
         </div>
     </form>
