--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -6,24 +6,16 @@
         <div class="col-3"></div>
         <div class="col-6">
             <div class="card">
-
                 <div class="card-header">
-                    {% if object %}
-                    <h5 class="card-title">
-                        Редактирование профиля
-                    </h5>
-                    {% else %}
                     <h3 class="card-title">
                         Регистрация
                     </h3>
-                    {% endif %}
                 </div>
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-success">
-                        Зарегистрироваться
-                    </button>
+                    <button type="submit" class="btn btn-success">Регистрация</button>
+
                 </div>
             </div>
         </div>
