--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -16,10 +16,12 @@
                         <p class="card-text">{{ product.name }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}"
+                                <a class="btn btn-outline-primary" href="{% url 'catalog:product_detail' product.pk %}"
                                    role="button">Подробнее</a>
-                                <a class="btn btn-success" href="{% url 'catalog:product_update' product.pk %}"
+                                <a class="btn btn-outline-success" href="{% url 'catalog:product_update' product.pk %}"
                                    role="button">Редактировать</a>
+                                <a class="btn btn-outline-danger" href="{% url 'catalog:product_delete' product.pk %}"
+                                   role="button">Удалить</a>
                             </div>
                         </div>
                     </div>
