--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -13,8 +13,10 @@
                             <p class="card-text">Просмотров статьи - {{ blog.number_views }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-primary" href="{% url 'blog:blog_list' %}" role="button">Назад</a>
+                                    {% if perms.blog.can_manage_publications %}
                                     <a class="btn btn-success" href="{% url 'blog:blog_update' blog.pk %}" role="button">Редактировать</a>
+                                    {% endif %}
+                                    <a class="btn btn-primary" href="{% url 'blog:blog_list' %}" role="button">Назад</a>
                                 </div>
                             </div>
                         </div>
