--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -12,9 +12,11 @@
                             <p class="card-text">{{ blog.title }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a class="btn btn-primary" href="{% url 'blog:blog_detail' blog.pk %}" role="button">Читать</a>
+                                    {% if perms.blog.can_manage_publications %}
                                     <a class="btn btn-success" href="{% url 'blog:blog_update' blog.pk %}" role="button">Редактировать</a>
                                     <a class="btn btn-danger" href="{% url 'blog:blog_delete' blog.pk %}" role="button">Удалить</a>
+                                    {% endif %}
+                                    <a class="btn btn-primary" href="{% url 'blog:blog_detail' blog.pk %}" role="button">Читать</a>
                                 </div>
                             </div>
                         </div>
